# JARVIS

./: AGENTS.md  package.json
src-tauri/: .gitignore  Cargo.toml  pyproject.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: chat_bridge.py  transcriber.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  config.rs  documents.rs  mod.rs  permission.rs  sandbox.rs  skills.rs  system.rs  voice.rs
src-tauri/src/commands/chat/: mod.rs  prompt.rs  providers.rs  sessions.rs  tokens.rs
src-tauri/src/domain/: chat.rs  config.rs  db.rs  errors.rs  mod.rs  permission.rs  skills.rs  system.rs  voice.rs
src-tauri/src/domain/config/: app_config.rs  defaults.rs  mod.rs  providers.rs
src-tauri/src/handlers/: chat.rs  documents.rs  mod.rs  skills.rs  voice.rs
src-tauri/src/handlers/chat/: handler.rs  history.rs  mod.rs  providers.rs
src-tauri/src/infrastructure/: agent.rs  db.rs  mod.rs  permission_gate.rs  repository.rs  system.rs
src-tauri/src/infrastructure/agent/: builder.rs  dispatch.rs  manager.rs  mod.rs  sandbox.rs  signature.rs  stream_consumer.rs
src-tauri/tests/: agent_manager_concurrency.rs  agent_manager_tests.rs  agent_signature_tests.rs  agent_stream_consumer_tests.rs  bluetooth_tests.rs  chat_history_tests.rs  domain_tests.rs  permission_gate_tests.rs  regression_old_db_migration.rs  regression_session_history_normalize.rs  sandbox_tests.rs  voice_tests.rs
src-tauri/tests/db/: edge_cases.rs  helpers.rs  mod.rs  read.rs  relations.rs  update.rs
(+81 files in other folders)
