[package]
name = "jarvis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = "0.28.3"
tokio = { version = "1.51.0", features = ["full"] }
anyhow = "1.0.102"
crossbeam-channel = "0.5"
jarvis-transcriber = { git = "https://github.com/PROJECT-JARV1S/jarvis-voice.git", version = "0.1.1" }
thiserror = "2.0.18"

