[project]
name = "src-tauri"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "jarvis-voice",
    "jarvis-chat",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
jarvis-voice = { git = "https://github.com/PROJECT-JARV1S/jarvis-voice.git" }
jarvis-chat = { git = "https://github.com/PROJECT-JARV1S/jarvis-chat.git" }
